--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="where_to">
       <h3 onclick="continentAll()" , style="cursor:pointer;">Where in the world?</h3>
     </div>
-    <div class="theme" onclick="themeChanger()">
+    <div class="theme" >
       <div class="moon_image"><img src="moon.png" class="moon" alt="" /></div>
       <div class="mode_type">
-        <p>Dark Mode</p>
+        <p onclick="themeChanger()" class="mode_type_text">Dark Mode</p>
       </div>
     </div>
   </div>
