--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <!------------------------------toolbar---------------------------------------->
   <div class="toolbar">
     <div class="where_to">
-      <h3 onclick="continentAll()" , style="cursor:pointer;">Where in the world?</h3>
+      <h3 onclick="continentAll()" style="cursor:pointer;">Where in the world?</h3>
     </div>
     <div class="theme" >
       <div class="moon_image"><img src="moon.png" class="moon" alt="" /></div>
       <div class="mode_type">
-        <p onclick="themeChanger()" class="mode_type_text">Dark Mode</p>
+        <p onclick="themeChanger()" class="mode_type_text" style="cursor:pointer;">Dark Mode</p>
       </div>
     </div>
   </div>
